# Kelvin-Assistant

./: .env.example  .gitattributes  .gitignore  Dockerfile.backend  GEMINI.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  api-tokens.example.json  docker-compose.test.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md
backend/src/kelvin_assistant/: __init__.py  main.py  version.py
clients/: README.md
clients/powershell/: README.md
docs/: agent-architecture.md  api-contract.md  architecture.md  backup-restore.md  containerization-test.md  email-setup-guide.md  installation.md  knowledge-data-model.md  licensing.md  memory-design.md  n8n-credential-setup.md  n8n-integration.md  operational-runbooks.md  postgresql-pgvector.md  release-notes-v1.0.md  release-package.md  roadmap.md  security-baseline.md  token-management.md  v1.0-verification.md  workflow-implementation-plan.md
docs/ai/: git-workflow.md  implementation-rules.md  pr-review.md  roadmap-status.md  task-planning.md  v07-guide.md  v08-guide.md  v09-guide.md  v10-guide.md  v10-readiness-audit.md
docs/decisions/: 0001-ports-and-adapters.md  0002-host-side-powershell-execution.md  0003-apache-2.0-project-license.md  0004-versioned-chat-api-and-sessions.md  0005-sse-chat-streaming.md  0006-minimal-chat-frontend.md  0007-postgresql-pgvector-for-knowledge-store.md  0008-workflow-ui-over-voice.md  0009-memory-model.md  0010-client-mediated-agent-loop.md  0011-postgresql-agent-audit.md  0012-structured-agent-planner.md  0013-self-hosted-n8n-automation.md  0014-scoped-api-tokens.md  README.md
frontend/: README.md
infrastructure/: README.md
infrastructure/n8n/: .env.example  README.md  compose.yaml
infrastructure/n8n/workflows/: Updater v2.json  chat_workflow.json  health_check.json  researcher_v1.json  updater_v1.json
infrastructure/sql/: 001_create_knowledge_schema.sql  002_create_memory_schema.sql  003_create_agent_audit_schema.sql  004_create_security_audit_schema.sql  README.md
infrastructure/systemd/: kelvin-api.service
scripts/: README.md  __init__.py  backup-kelvin-db.sh  check_ollama.py  import_document.py  update-kelvin-vm.sh
tests/: README.md
tests/unit/adapters/: test_agent_http.py  (+13 more)
(+135 files in other folders)
